@@ -204,6 +204,11 @@ public class SpawnedVMSupport {
          commandList.add(jacocoAgent);
       }
 
+      if (Runtime.version().feature() >= 24) {
+         commandList.add("--enable-native-access=ALL-UNNAMED");
+         commandList.add("--sun-misc-unsafe-memory-access=allow");
+      }
+
       commandList.add(className);
       for (String arg : args) {
          commandList.add(arg);
